--- a/index.html
+++ b/index.html
@@ -1,9 +1,46 @@
-<!DOCTYPE html><html><head><title>Nipster! npm search tool for Node.js</title><meta name="description" content="npm search tool for node (Node.js)"><meta name="author" content="Eirik Brandtzæg, eirikb@eirikb.no"><meta charset="utf-8"><link rel="stylesheet" href="dist/app.min.css"><script>var _gaq=_gaq || [];
-_gaq.push(['_setAccount','UA-28988150-1']);
-_gaq.push(['_trackPageview']);
-(function() {
-  var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-  ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-})();
-</script><body><a href="http://github.com/eirikb/nipster"><img src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" class="fork"></a><div class="wrapper"><div class="content"><div class="npm"><img src="img/npm.png"><span class="plus">+</span><img src="img/github.png"><span class="plus">=</span><span class="big">Perfect rating!</span></div><table class="display"><thead><th class="small">name</th><th>description</th><th class="small">author</th><th class="small">modified</th><th class="tiny">forks</th><th class="tiny">stargazers</th><th class="tiny">stars</th><th class="tiny">npm</th></thead></table></div></div><script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script><script src="//cdnjs.cloudflare.com/ajax/libs/datatables/1.9.4/jquery.dataTables.min.js"></script><script src="//cdnjs.cloudflare.com/ajax/libs/history.js/1.7.1/native.history.js"></script><script src="dist/app.min.js"></script></body></head></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Nipster! Github-rated search tool for npm, Bower</title>
+    <meta name="author" content="Eirik Brandtzæg, eirikb@eirikb.no">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="dist/app.css">
+    <script>
+      var _gaq=_gaq || [];
+      _gaq.push(['_setAccount','UA-28988150-1']);
+      _gaq.push(['_trackPageview']);
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+      
+    </script>
+    <body><a href="http://github.com/eirikb/nipster"><img src="img/honesty.png" alt="Stargaze me on GitHub" class="fork"></a>
+      <div class="wrapper">
+        <div class="content">
+          <ul class="header">
+            <li><a href="#npm"><img src="img/npm.png"></a></li>
+          </ul>
+          <table class="display">
+            <thead>
+              <th class="small">name</th>
+              <th>description</th>
+              <th class="small">author</th>
+              <th class="small">modified</th>
+              <th class="tiny">forks</th>
+              <th class="tiny">stargazers</th>
+              <th class="tiny">stars</th>
+              <th class="tiny">npm</th>
+            </thead>
+          </table>
+        </div>
+      </div>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/datatables/1.9.4/jquery.dataTables.min.js"></script>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/history.js/1.7.1/native.history.js"></script>
+      <script src="dist/js/fnSetFilteringDelay.js"></script>
+      <script src="dist/js/app.js"></script>
+    </body>
+  </head>
+</html>
